crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@int__int.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/int/int.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
